--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -220,7 +220,7 @@
                             <div class="row">
                                 <div class="col">&nbsp;</div>
                                 <div class="col">
-                                    <button type="submit" class="btn btn-primary">Register</button>
+                                    <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Register</button>
                                 </div>
                                 <div class="col">
                                     <button
@@ -231,6 +231,7 @@
                                     Reset
                                 </button>
                                 </div>
+                                
                             </div>
                         </div>
                     </form>
