--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -234,9 +234,9 @@
                                 </button>
                                 </div>
                                 <div class="col">
-                                    <!--<button (click)="fetchUserCitizenData()" class="btn btn-primary">Load Data</button>-->
+                                    <button (click)="fetchUserCitizenData()" class="btn btn-primary">Load Data</button>
                                     &nbsp;
-                                    <button mat-button (click)="openDialog()">View Citizen User Data</button>
+                                    <button mat-flat-button (click)="openDialog()">View Citizen User Data</button>
                                 </div>
                             </div>
                             <div class="row">
