--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,3 +7,23 @@
   .error-message small {
     display: block; /* Ensure each error message appears on a new line */
   }
+
+
+  body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: Arial, sans-serif;
+  }
+  
+  .content {
+    min-height: calc(100vh - 120px); /* Adjust based on your header/footer height */
+    padding: 20px;
+  }
+  
+  app-header, app-footer {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    text-align: center;
+  }
