--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<nav>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <a routerLink="/home" routerLinkActive="active">Home</a>
     <a routerLink="/about" routerLinkActive="active">About</a>
     <a routerLink="/contact" routerLinkActive="active">Contact</a>
-    <a routerLink="/registraion" routerLinkActive="active">Registraion</a>
+    <a routerLink="/registraion" routerLinkActive="active">Registration</a>
   </nav>
