--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,8 +22,9 @@
   }
   
   app-header, app-footer {
-    background-color: #333;
+    /*background-color: #333;*/
     color: white;
-    padding: 20px;
+    padding: 5px;
     text-align: center;
+    width: auto;
   }
