--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+<!--<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <a routerLink="/home" routerLinkActive="active">Home</a>
     <a routerLink="/about" routerLinkActive="active">About</a>
     <a routerLink="/contact" routerLinkActive="active">Contact</a>
     <a routerLink="/registraion" routerLinkActive="active">Registration</a>
+    <a routerLink="/login" routerLinkActive="active">Login</a>
+  </nav>-->
+
+
+  <div class="container-fluid">
+    <nav>
+      <div class="brand-title">NGDRS</div>    
+      <div>
+          <span><a routerLink="/home" routerLinkActive="active">Home</a></span>    
+          <span><a routerLink="/about" routerLinkActive="active">About</a></span>    
+          <span><a routerLink="/contact" routerLinkActive="active">Contact</a></span>    
+          <span><a routerLink="/registraion" routerLinkActive="active">Registration</a></span>    
+      </div>
+      <div>
+        <span><a routerLink="/login" routerLinkActive="active">Login</a></span>
+      </div>
   </nav>
+</div>
