--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -2,7 +2,8 @@
     <div class="col-8">
         <div class="card mx-auto" style="width: 80rem;">
             <div class="card-body">
-                <h5 class="card-title mb-4">Register</h5>
+                <h3 class="bi bi-person-vcard-fill"> Register</h3>
+                <h5 class="card-title mb-4"></h5>
                     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="row gy-2 gx-3 align-items-center">
                         <div class="mb-3">
                             <div class="row">
@@ -74,7 +75,7 @@
                                             <div class="col">
                                                 <label
                                                     for="building"
-                                                    class="form-label">Building Name / No. / Floor
+                                                    class="form-label">Building Name / No. / Floor <i class="bi bi-buildings"></i>
                                                 </label>
                                             </div>
                                             <div class="col">
