--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,6 +14,9 @@
     padding: 0;
     height: 100%;
     font-family: Arial, sans-serif;
+    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: hidden;
   }
   
   .content {
