--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,9 +7,9 @@
   </nav>-->
 
 
-  <div class="container-fluid">
-    <nav>
-      <div class="brand-title">NGDRS</div>    
+  <!--<div class="container-fluid">-->
+    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+      <div >NGDRS</div>    
       <div>
           <span><a routerLink="/home" routerLinkActive="active">Home</a></span>    
           <span><a routerLink="/about" routerLinkActive="active">About</a></span>    
@@ -20,4 +20,4 @@
         <span><a routerLink="/login" routerLinkActive="active">Login</a></span>
       </div>
   </nav>
-</div>
+<!--</div>-->
