--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,6 +8,31 @@
 
 
   <!--<div class="container-fluid">-->
+    <header id="top" style="background-color:black">
+      <ul class="nav justify-content-end">
+          <li class="nav-item">
+              <a class="nav-link" href="#main" style="color:white;font-size: 14px;"> <b>Skip to main content</b></a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link text-white " id="small">-A</a>
+          </li>
+          <li class="nav-item">
+              <a href="#" id="medium" class="selected nav-link text-white">A</a>
+          </li>
+          <li class="nav-item">
+              <a href="#" class="nav-link text-white" id="large">A+</a>
+          </li>
+      </ul>
+    </header>
+    <div class="row" style="color: black;">
+      <div class="col-md-3 text-center">
+        <img [src]="imageemblem" [alt]="altText" />
+      </div>
+      <div class="col-md-6">
+          <h2 class="text-center"> National Generic Document Registration System</h2>  
+          <h3 class="text-center">Department of Land Resources - Government of India </h3>
+      </div>
+    </div>
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
       <div >NGDRS</div>    
       <div>
