--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,32 @@
 <body>
-    <p>home works!</p>
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img [src]="img1" [alt]="altText" class="d-block w-50"/>
+          </div>
+          <div class="carousel-item">
+            <img [src]="img2" [alt]="altText" class="d-block w-50"/>
+          </div>
+          <div class="carousel-item">
+            <img [src]="img3" [alt]="altText" class="d-block w-50"/>
+          </div>
+          <div class="carousel-item">
+            <img [src]="img4" [alt]="altText" class="d-block w-50"/>
+          </div>
+          <div class="carousel-item">
+            <img [src]="img5" [alt]="altText" class="d-block w-50"/>
+          </div>
+          <div class="carousel-item">
+            <img [src]="img6" [alt]="altText" class="d-block w-50"/>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 </body>
