--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,10 +36,13 @@
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
       <div >NGDRS</div>    
       <div>
-          <span><a routerLink="/home" routerLinkActive="active">Home</a></span>    
+          <!--<span><a routerLink="/home" routerLinkActive="active">Home</a></span> -->
+          <span><a routerLink="/welcomepage" routerLinkActive="active">Home</a></span>
           <span><a routerLink="/about" routerLinkActive="active">About</a></span>    
           <span><a routerLink="/contact" routerLinkActive="active">Contact</a></span>    
-          <span><a routerLink="/registraion" routerLinkActive="active">Registration</a></span>    
+          <span><a routerLink="/registraion" routerLinkActive="active">Registration</a></span>
+          <span><a routerLink="/submitgrievance" routerLinkActive="active">Submit Grievance</a></span>  
+          <span><a routerLink="/trackgrievance" routerLinkActive="active">Track Grievance</a></span>      
       </div>
       <div>
         <span><a routerLink="/login" routerLinkActive="active">Login</a></span>
