--- a/src/app/left-menu/left-menu.component.html
+++ b/src/app/left-menu/left-menu.component.html
@@ -3,18 +3,18 @@
         <a [routerLink]="'geninfolist'" class="text-decoration-none">Home</a>
     </li>-->
     <li class="list-group-item list-group-item-action">
-        <a [routerLink]="'geninfolist'" class="text-decoration-none">Document Entry(PDE)</a>
+        <a [routerLink]="'geninfolist'" [routerLinkActive]="'active'" class="text-decoration-none"><i class="bi bi-journal-text"></i>&nbsp; Document Entry(PDE)</a>
     </li>
     <li class="list-group-item list-group-item-action">
-        <a [routerLink]="'geninfolist'" class="text-decoration-none">E-Search</a>
+        <a [routerLink]="'esearch'" [routerLinkActive]="'active'" class="text-decoration-none"><i class="bi bi-search"></i>&nbsp; E-Search</a>
     </li>
     <li class="list-group-item list-group-item-action">
-        <a [routerLink]="'geninfolist'" class="text-decoration-none">User Management</a>
+        <a [routerLink]="'usermnmt'" [routerLinkActive]="'active'" class="text-decoration-none"><i class="bi bi-person-fill"></i>&nbsp; User Management</a>
     </li>
     <li class="list-group-item list-group-item-action">
-        <a [routerLink]="'geninfolist'" class="text-decoration-none">Valuation</a>
+        <a [routerLink]="'valuation'" [routerLinkActive]="'active'" class="text-decoration-none"><i class="bi bi-pencil-square"></i>&nbsp; Valuation</a>
     </li>
     <li class="list-group-item list-group-item-action">
-        <a [routerLink]="'geninfolist'" class="text-decoration-none">Certified Copy</a>
+        <a [routerLink]="'certcpy'" [routerLinkActive]="'active'" class="text-decoration-none"><i class="bi bi-envelope-paper"></i>&nbsp; Certified Copy</a>
     </li>
 </ul>
