--- a/src/app/general-info-list/general-info-list.component.html
+++ b/src/app/general-info-list/general-info-list.component.html
@@ -1,1 +1,19 @@
 <p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+<p>general-info-list works!</p>
+
